<resources>
    <string name="app_name">BMI</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="bmi">BMI :</string>
    <string name="input_error">Calculate</string>
    <string name="reset">Reset</string>
    <string name="under">Underweight</string>
    <string name="normal">Normal</string>
    <string name="over">Overweight</string>
</resources>
